<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/tv_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:text="@string/title"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>



    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:text="@string/address"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_address"
        android:textSize="15sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/tv_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:text="@string/telephone"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="15sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/template"
        android:textSize="15sp"
        android:textColor="@color/colorText"/>

</LinearLayout>